k8s-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-webhook-gateway-app
  namespace: platformbot
  labels:
    app: n8n-webhook-gateway-app
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: external-ingress-nginx
  rules:
    - host: n8n-gateway.theiconic.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-webhook-gateway-app
                port:
                  number: 80
  tls:
    - hosts:
        - n8n-gateway.theiconic.com.au
      secretName: n8n-gateway-theiconic-certificate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-webhook-gateway-internal
  namespace: platformbot
  labels:
    app: n8n-webhook-gateway-app
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: external-ingress-nginx
  rules:
    - host: n8n-webhook-gateway-app.platformbot.snag.eks.aws.theiconic.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-webhook-gateway-app
                port:
                  number: 80
  tls:
    - hosts:
        - n8n-webhook-gateway-app.platformbot.snag.eks.aws.theiconic.com.au
      secretName: n8n-webhook-gateway-app-certificate
